# 1500-Q-A

./: 1500QA.py  1500QA2.py  750QA.py  DeepQA.py  DiaryQA.py  app.py  memory_review_app.py  pyproject.toml  review_app.py  transform copy.py  tts.py  tts_test.py
.devcontainer/: devcontainer.json
data/: 0528 Diary Output.xlsx  0528 Newton 1500 Q&A answered.json  0528 Newton 1500 Q&A answered1.json  0528 Newton 1500 Q&A.json  0528 Newton 1500 Q&A2 answered.json  0528 Newton 1500 Q&A2 answered2.json  0528 Newton 1500 Q&A2 answered3.json  0528 Newton 1500 Q&A2 answered4.json
data/0528 Newton Profile/: 0508 isaac_newton_kids_around_en.json  0508 isaac_newton_profile_en.json  0528 Diary Output.xlsx  0528 isaac_newton_family_en.json  0528 isaac_newton_schedule_en.json  3-家庭成员介绍-20250520.docx  4-日常时间表-20250520.docx
data/answers/: 0531 Newton 750 Survey As.json  0531 Newton Deeper As.json  0531 Newton Diary As.json
data/questions/: 0531 Newton 750 Survey Qs.json  0531 Newton Deeper Qs.json
